<resources>
    <string name="app_name">My Flights App</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">Details</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="action_map">Map Location</string>
    <string name="action_share">Share</string>


    <string name="pref_origin_label">Origin</string>
    <string name="pref_origin_key" translatable="false">origin</string>
    <string name="pref_origin_default" translatable="false">SKG</string>

    <string name="pref_destination_label">Destination</string>
    <string name="pref_destination_key" translatable="false">destination</string>
    <string name="pref_destination_default" translatable="false">DUS</string>

    <string name="pref_departureDay_label">Departure Day</string>
    <string name="pref_departureDay_key" translatable="false">DepartureDay</string>
    <string name="pref_departureDay_default" translatable="false">2016-12-25</string>

    <string name="pref_returnDay_label">Return Day</string>
    <string name="pref_returnDay_key" translatable="false">returnDay</string>
    <string name="pref_returnDay_default" translatable="false">2016-12-28</string>

    <string name="pref_numberOfPersons_label">Number of people travelling</string>
    <string name="pref_numberOfPersons_key" translatable="false">numberOfPersons</string>
    <string name="pref_numberOfPersons_default" translatable="false">1</string>

    <string name="pref_nonStop_label">Non-Stop Travelling</string>
    <string name="pref_nonStop_key" translatable="false">nonStop</string>
    <string name="pref_nonStop_default" translatable="false">true</string>

    <string name="pref_maxPrice_label">Maximum Price</string>
    <string name="pref_maxPrice_key" translatable="false">maxPrice</string>
    <string name="pref_maxPrice_default" translatable="false">400</string>

    <string name="pref_currency_label">Currency</string>
    <string name="pref_currency_key" translatable="false">currency</string>
    <string name="pref_currency_default" translatable="false">EUR</string>

    <string name="pref_numOfResults_label">Maximum number of results</string>
    <string name="pref_numOfResults_key" translatable="false">numOfResults</string>
    <string name="pref_numOfResults_default" translatable="false">10</string>

    <string name="pref_location_label">Map Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">8133841</string>





</resources>
